--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -26,6 +26,12 @@
   justify-content: space-between;
 }
 
+.metric-card:first-child{
+  grid-column: 1/ span 2;
+  grid-row: 1/ span 2;
+  height: auto;
+}
+
 .metric-card:hover {
   background: var(--bg-white);
 }
